--- a/style.css
+++ b/style.css
@@ -8,10 +8,15 @@ h1{
     color: #ffffff;
     background-image: linear-gradient(#363b3b,#5e667b,#373c3b);
 }
+div#total {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 h2{
     margin: 0;
     padding: 24px 0px;
-    text-align: center;
+    padding-right: 5px;
 }
 .have-cash {
     border: 1px solid #dfdddd;
@@ -100,7 +105,25 @@ h5{
     margin: 5px;
     font-size: large;
 }
-.quantity{
+.app-quantity{
+    width: 8vh;
+    padding: 7px 0px;
+    border: 1px solid;
+    border-right-style: none;
+    border-left-style: none;
+    background-image: linear-gradient(#c8c7c7,#fdfdfd);
+    text-align: center;
+}
+.org-quantity{
+    width: 8vh;
+    padding: 7px 0px;
+    border: 1px solid;
+    border-right-style: none;
+    border-left-style: none;
+    background-image: linear-gradient(#c8c7c7,#fdfdfd);
+    text-align: center;
+}
+.ban-quantity{
     width: 8vh;
     padding: 7px 0px;
     border: 1px solid;
@@ -133,9 +156,41 @@ button.minus i{
 button.plus i{
     color: #ffffff;
 }
-
-.quantity::-webkit-inner-spin-button, 
-.quantity::-webkit-outer-spin-button { 
+.foot{
+    background: #e0ebe8;
+    min-height: 17vh;
+    padding-top: 13vh;
+}
+h6{
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+}
+.foot p{
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    color: green;  
+}
+.app-quantity::-webkit-inner-spin-button, 
+.app-quantity::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+.org-quantity::-webkit-inner-spin-button, 
+.org-quantity::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+.ban-quantity::-webkit-inner-spin-button, 
+.ban-quantity::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
 }
